--- a/x360ce.App.Beta/MainControl.xaml
+++ b/x360ce.App.Beta/MainControl.xaml
@@ -8,78 +8,97 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	HorizontalAlignment="Stretch"
 	VerticalAlignment="Stretch"
-	d:DesignHeight="780"
-	d:DesignWidth="800"
+	d:DesignHeight="900"
+	d:DesignWidth="1600"
 	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
+		
 		<JcControls:InfoControl x:Name="InfoPanel" x:FieldModifier="public" RightIconContent="{StaticResource Icon_gamepad}" />
-		<DockPanel Grid.Row="1" Margin="0,0,0,-3">
-			<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-				<Label Margin="3,0,0,0" VerticalAlignment="Center" Content="Game" />
-				<ComboBox x:Name="GameToCustomizeComboBox" MinWidth="320" />
-			</StackPanel>
-			<StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-				<Button Name="AddGameButton" Margin="0,3,3,3" Click="AddGameButton_Click">
-					<StackPanel>
-						<ContentControl Content="{StaticResource Icon_Add}" />
-						<Label Content="Add Game..." />
-					</StackPanel>
-				</Button>
-				<Button Name="TestButton" Margin="0,3,3,3" Click="TestButton_Click">
-					<StackPanel>
-						<ContentControl Content="{StaticResource Icon_test}" />
-						<Label Content="Test..." />
-					</StackPanel>
-				</Button>
-				<Button Name="SaveAllButton" Margin="0,3,3,3" Click="SaveAllButton_Click">
-					<StackPanel>
-						<ContentControl Content="{StaticResource Icon_save}" />
-						<Label Content="Save All" />
-					</StackPanel>
-				</Button>
-			</StackPanel>
-		</DockPanel>
-		<local:MainBodyControl x:Name="MainBodyPanel" Grid.Row="2" Margin="3,3,3,3" />
-		<StatusBar Grid.Row="3" HorizontalAlignment="Left">
+		<StackPanel Orientation="Horizontal" Grid.Row="1">
+
+		<!--Add Game Program-->
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="*" />
+			</Grid.RowDefinitions>
+				<Border Style="{StaticResource BorderDescriptionNormal}" Padding="6,3,6,3" Margin="3,3,0,0">
+					<Label HorizontalAlignment="Center">STEP 1 - Add and select application to configure.</Label>
+				</Border>
+				<StackPanel Orientation="Horizontal" Grid.Row="1">
+					<Button Name="AddGameButton" Click="AddGameButton_Click">
+						<StackPanel>
+							<ContentControl Content="{StaticResource Icon_Add}" />
+							<Label Content="Add..." />
+						</StackPanel>
+					</Button>
+					<Button Name="TestButton" Click="TestButton_Click" Margin="0,3,3,3">
+						<StackPanel>
+							<ContentControl Content="{StaticResource Icon_test}" />
+							<Label Content="Test..." />
+						</StackPanel>
+					</Button>
+					<Button Name="SaveAllButton" Click="SaveAllButton_Click"  Margin="0,3,0,3">
+						<StackPanel>
+							<ContentControl Content="{StaticResource Icon_save}" />
+							<Label Content="Save All Settings" />
+						</StackPanel>
+					</Button>
+				</StackPanel>
+				<ListBox Grid.Row="2" x:Name="GameToCustomizeComboBox" Margin="3,0,0,3">
+					<ListBox.ItemContainerStyle>
+						<Style TargetType="ListBoxItem" BasedOn="{StaticResource ListBoxItem_Default}">
+							<Setter Property="Padding" Value="6"/>
+							<Setter Property="Background" Value="White"/>
+							<Setter Property="Margin" Value="0,0,0,1" />
+						</Style>
+					</ListBox.ItemContainerStyle>
+				</ListBox>
+			</Grid>
+			
+		<local:MainBodyControl x:Name="MainBodyPanel" Margin="3" />
+		</StackPanel>
+		
+		<StatusBar Grid.Row="2" HorizontalAlignment="Left">
 			<StatusBarItem>
-				<Label x:Name="StatusTimerLabel" Padding="0,0,0,0" Content="StatusTimerLabel" />
+				<Label x:Name="StatusTimerLabel" Content="StatusTimerLabel" />
 			</StatusBarItem>
 		</StatusBar>
-		<StatusBar Grid.Row="3" HorizontalAlignment="Right">
+		<StatusBar Grid.Row="2" HorizontalAlignment="Right">
 			<StatusBarItem>
-				<Label x:Name="UpdateFrequencyLabel" Padding="0,0,0,0" Content="Hz:0" />
+				<Label x:Name="UpdateFrequencyLabel" Content="Hz:0" />
 			</StatusBarItem>
 			<Separator />
 			<StatusBarItem>
-				<Label x:Name="FormUpdateFrequencyLabel" Padding="0,0,0,0" Content="Hz:0" />
+				<Label x:Name="FormUpdateFrequencyLabel" Content="Hz:0" />
 			</StatusBarItem>
 			<Separator />
 			<StatusBarItem>
-				<Label x:Name="UpdateDevicesStatusLabel" Padding="0,0,0,0" Content="D:0" />
+				<Label x:Name="UpdateDevicesStatusLabel" Content="D:0" />
 			</StatusBarItem>
 			<Separator />
 			<StatusBarItem>
-				<Label x:Name="CloudMessagesLabel" Padding="0,0,0,0" Content="M:0" />
+				<Label x:Name="CloudMessagesLabel" Content="M:0" />
 			</StatusBarItem>
 			<Separator />
 			<StatusBarItem>
-				<Label x:Name="StatusEventsLabel" Padding="0,0,0,0" Content="StatusEventsLabel" />
+				<Label x:Name="StatusEventsLabel" Content="StatusEventsLabel" />
 			</StatusBarItem>
 			<Separator />
 			<StatusBarItem>
-				<Label x:Name="StatusSaveLabel" Padding="0,0,0,0" Content="StatusSaveLabel" />
+				<Label x:Name="StatusSaveLabel" Content="StatusSaveLabel" />
 			</StatusBarItem>
 			<Separator />
 			<StatusBarItem>
-				<Label x:Name="StatusIsAdminLabel" Padding="0,0,0,0" Content="StatusIsAdminLabel" />
+				<Label x:Name="StatusIsAdminLabel" Content="StatusIsAdminLabel" />
 			</StatusBarItem>
 			<Separator />
 			<StatusBarItem>
@@ -92,14 +111,13 @@
 					<Label
 						x:Name="StatusErrorsLabel"
 						Margin="3,0,0,0"
-						Padding="0,0,0,0"
 						Content="StatusErrorsLabel"
 						PreviewMouseDown="StatusErrorsLabel_PreviewMouseDown" />
 				</StackPanel>
 			</StatusBarItem>
 			<Separator />
 			<StatusBarItem>
-				<Label x:Name="StatusDllLabel" Padding="0,0,0,0" Content="StatusDllLabel" />
+				<Label x:Name="StatusDllLabel" Content="StatusDllLabel" />
 			</StatusBarItem>
 		</StatusBar>
 	</Grid>
