--- a/x360ce.App.Beta/Controls/PadListControl.xaml
+++ b/x360ce.App.Beta/Controls/PadListControl.xaml
@@ -6,7 +6,8 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignWidth="270"
+	d:Width="270"
+	d:Height="400"
 	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
@@ -80,11 +81,16 @@
 							<converters:BoolToImageSourceConverter x:Key="BoolToImageSourceConverter" />
 							<converters:ConnectionClassToImageConverter x:Key="ConnectionClassToImageConverter" />
 							<!--<converters:ItemFormattingConverter x:Key="_MainDataGridFormattingConverter" />-->
+							<Style TargetType="DataGridColumnHeader" BasedOn="{StaticResource DataGridColumnHeader_Default}">
+								<Setter Property="Padding" Value="3,0,0,0"/>
+								<!-- Change these numbers for desired padding -->
+							</Style>
 						</DataGrid.Resources>
 
 						<!--  Cell - Rows of ofline controllers are transparent.  -->
 						<DataGrid.CellStyle>
 							<Style BasedOn="{StaticResource DataGridCell_Default}" TargetType="DataGridCell">
+
 								<Style.Triggers>
 									<DataTrigger Binding="{Binding IsOnline}" Value="False">
 										<Setter Property="Opacity" Value="0.2" />
@@ -101,12 +107,13 @@
 						<DataGrid.Columns>
 							<!--Enabled-->
 							<DataGridCheckBoxColumn
+							Width="25"
 							x:Name="IsEnabledColumn"
 							Binding="{Binding IsEnabled, IsAsync=True, Mode=TwoWay}"
 							EditingElementStyle="{StaticResource CheckBoxCell_Default}"
 							ElementStyle="{StaticResource CheckBoxCell_Default}"
 							Header="On" />
-							
+
 							<DataGridTextColumn
 							Width="*"
 							Binding="{Binding ProductName}"
